tests/ui/suggestions/dont-suggest-deref-inside-macro-issue-58298.stderr
error[E0308]: mismatched types
  --> $DIR/dont-suggest-deref-inside-macro-issue-58298.rs:11:5
   |
LL | /     intrinsic_match! {
LL | |         "abc"
LL | |     };
   | |_____^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` which comes from the expansion of the macro `intrinsic_match` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
